--- a/src/data_layer.yaml
+++ b/src/data_layer.yaml
@@ -1324,6 +1324,42 @@ paths:
                                   type: string
                                   format: bytes32
                   - $ref: "#/components/schemas/apiResponse"
+  /submit_pending_root:
+    post:
+      tags:
+        - Data Layer
+      summary: Submits a pending root.
+      description: Submits a pending root.
+      operationId: submit_pending_root
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - id
+              properties:
+                store_id:
+                  type: string
+                  format: bytes32
+                fee:
+                  type: integer
+                  format: uint64
+                  default: 0
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - type: object
+                    properties:
+                      tx_id:
+                        type: string
+                        format: bytes32
+                  - $ref: "#/components/schemas/apiResponse"
 externalDocs:
   description: Find out more about chia
   url: https://chia.net
