--- a/src/daemon.yaml
+++ b/src/daemon.yaml
@@ -72,6 +72,8 @@ components:
               type: boolean
             min_length:
               type: integer
+    network_info:
+      $ref: "schemas/network_info.yaml#/network_info"
     private_key:
       type: object
       properties:
@@ -839,6 +841,24 @@ paths:
                             farmer_public_key:
                               type: string
                               format: hex
+                  - $ref: "#/components/schemas/apiResponse"
+  /get_network_info:
+    post:
+      tags:
+        - Shared
+      description: Retrieves some information about the current network.
+      summary: Retrieves some information about the current network.
+      operationId: full_node_get_network_info
+      requestBody:
+        $ref: "#/components/requestBodies/empty"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/network_info"
                   - $ref: "#/components/schemas/apiResponse"
 externalDocs:
   description: Find out more about chia
