--- a/src/data_layer.yaml
+++ b/src/data_layer.yaml
@@ -38,6 +38,8 @@ components:
       $ref: "schemas/internal_node.yaml#/internal_node"
     mirror:
       $ref: "schemas/mirror.yaml#/mirror"
+    network_info:
+      $ref: "schemas/network_info.yaml#/network_info"
     offer:
       $ref: "schemas/offer.yaml#/offer"
     offer_store:
@@ -1371,6 +1373,24 @@ paths:
                       tx_id:
                         type: string
                         format: bytes32
+                  - $ref: "#/components/schemas/apiResponse"
+  /get_network_info:
+    post:
+      tags:
+        - Shared
+      description: Retrieves some information about the current network.
+      summary: Retrieves some information about the current network.
+      operationId: full_node_get_network_info
+      requestBody:
+        $ref: "#/components/requestBodies/empty"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/network_info"
                   - $ref: "#/components/schemas/apiResponse"
 externalDocs:
   description: Find out more about chia
