--- a/src/farmer.yaml
+++ b/src/farmer.yaml
@@ -36,6 +36,8 @@ components:
       $ref: "schemas/harvester_info.yaml#/harvester_info"
     harvester_summary:
       $ref: "schemas/harvester_summary.yaml#/harvester_summary"
+    network_info:
+      $ref: "schemas/network_info.yaml#/network_info"
     paginated_plot_request:
       $ref: "schemas/paginated_plot_request.yaml#/paginated_plot_request"
     pool_state_info:
@@ -532,6 +534,24 @@ paths:
                         type: array
                         items:
                           $ref: "#/components/schemas/signage_point_bundle"
+                  - $ref: "#/components/schemas/apiResponse"
+  /get_network_info:
+    post:
+      tags:
+        - Shared
+      description: Retrieves some information about the current network.
+      summary: Retrieves some information about the current network.
+      operationId: full_node_get_network_info
+      requestBody:
+        $ref: "#/components/requestBodies/empty"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/network_info"
                   - $ref: "#/components/schemas/apiResponse"
 externalDocs:
   description: Find out more about chia
